--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/timer.css">
   </head>
+
   <body>
     <div class="background">
       <img class="background-image" src="images/background-image.jpg">
+      <div class="scramble-container">
+        <p></p>
+      </div>
       <main class="timer-container">
         <p class="timer js-timer">0.00</p>
       </main>
@@ -22,10 +26,9 @@
         <div class="average-container js-average-container">
         </div>
       </div>
-      
     </div>
 
     <script src="data/times.js"></script>
-    <script src="scripts/timer.js"></script>
+    <script type="module" src="scripts/timer.js"></script>
   </body>
 </html>
