Added scramble to HTML, finished

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <body>
     <div class="background">
       <img class="background-image" src="images/background-image.jpg">
-      <div class="scramble-container">
-        <p></p>
-      </div>
+      <div class="scramble-container js-scramble-container"></div>
       <main class="timer-container">
         <p class="timer js-timer">0.00</p>
       </main>
